--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha index.spec.js",
+    "karma": "karma",
+    "test": "npm run karma start",
     "tslint": "tslint",
     "lint": "npm run tslint \"src/**/*.ts\""
   },
@@ -15,23 +16,29 @@
   },
   "devDependencies": {
     "@types/express": "^4.0.37",
+    "@types/jasmine": "^2.5.54",
+    "@types/webpack": "^3.0.10",
     "awesome-typescript-loader": "^3.2.3",
     "codelyzer": "^3.1.2",
     "istanbul-instrumenter-loader": "^3.0.0",
+    "jasmine-core": "^2.8.0",
     "json-loader": "^0.5.7",
     "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.4",
     "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.4",
+    "minimist": "^1.2.0",
     "mocha": "^3.5.0",
     "raw-loader": "^0.5.1",
     "source-map-loader": "^0.2.1",
     "supertest": "^3.0.0",
     "to-string-loader": "^1.1.5",
     "tslint": "^5.7.0",
+    "tslint-loader": "^3.5.3",
     "typescript": "^2.5.2",
     "webpack": "^3.5.5"
   }
